lang.java.statics.test/tests/positive/interfaces/subtyping/coercetointerface.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A implements I {}

[B]
public class B {
    public A a;
    public I m() {
        return this.a;
    }
}

[I]
public interface I {}

